# RoughCut

./: .gitignore  README.md  pyproject.toml
roughcut/: assembly.py  classify.py  cli.py  config.py  duplicates.py  export.py  fillers.py  media.py  models.py  pipeline.py  proxy.py  report.py  scenes.py  silence.py  textnorm.py  transcription.py
samples/: generate_samples.sh
tests/: test_assembly.py  test_config.py  test_duplicates.py  test_fillers.py  test_models.py  test_silence.py
