[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roughcut"
version = "0.1.0"
description = "Local macOS CLI that turns raw footage into a clean rough-cut cut list for DaVinci Resolve."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
    "faster-whisper>=1.0,<2.0",
    "opentimelineio>=0.17,<0.19",
    "otio-fcpx-xml-adapter>=1.0,<2.0",
    "otio-cmx3600-adapter>=1.0,<2.0",
    "scenedetect>=0.6.4,<0.8",
    "pydub>=0.25,<0.26",
    "webrtcvad>=2.0,<3.0",
    "rapidfuzz>=3.0,<4.0",
    "click>=8.1,<9.0",
    "numpy>=1.26,<3.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
roughcut = "roughcut.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["roughcut"]
